--- a/paper/code/eval.tex
+++ b/paper/code/eval.tex
@@ -383,8 +383,8 @@
 \>[15]\AgdaSymbol{$\mid$}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaBound{⇑L}%
-\>[31]\AgdaSymbol{=}%
-\>[34]\AgdaInductiveConstructor{steps}\AgdaSpace{}%
+\>[35]\AgdaSymbol{=}%
+\>[38]\AgdaInductiveConstructor{steps}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∎}}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{closed⇑→Value}\AgdaSpace{}%
@@ -394,7 +394,7 @@
 \AgdaBound{L}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{sn}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{$\mid$}\AgdaSpace{}%
+\>[15]\AgdaSymbol{$\mid$}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{M}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{L⇄M}\AgdaSpace{}%
@@ -406,7 +406,8 @@
 \AgdaBound{L⇄M}\AgdaSymbol{))}\<%
 \\
 \>[0]\AgdaSymbol{...}%
-\>[18]\AgdaSymbol{$\mid$}\AgdaSpace{}%
+\>[15][@{}l@{\AgdaIndent{0}}]
+\>[16]\AgdaSymbol{$\mid$}\AgdaSpace{}%
 \AgdaInductiveConstructor{steps}\AgdaSpace{}%
 \AgdaBound{M⇝N}\AgdaSpace{}%
 \AgdaBound{fin}%
@@ -423,7 +424,7 @@
 \AgdaBound{L}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{sn}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{$\mid$}\AgdaSpace{}%
+\>[15]\AgdaSymbol{$\mid$}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{M}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{L↪M}\AgdaSpace{}%
@@ -435,7 +436,8 @@
 \AgdaBound{L↪M}\AgdaSymbol{))}\<%
 \\
 \>[0]\AgdaSymbol{...}%
-\>[18]\AgdaSymbol{$\mid$}\AgdaSpace{}%
+\>[15][@{}l@{\AgdaIndent{0}}]
+\>[16]\AgdaSymbol{$\mid$}\AgdaSpace{}%
 \AgdaInductiveConstructor{steps}\AgdaSpace{}%
 \AgdaBound{M⇝N}\AgdaSpace{}%
 \AgdaBound{fin}%
