--- a/paper/code/strong_norm.tex
+++ b/paper/code/strong_norm.tex
@@ -72,6 +72,10 @@
 	\\[\AgdaEmptyExtraSkip]%
 	%
 	\\[\AgdaEmptyExtraSkip]%
+\end{code}
+
+%<*SN>
+\begin{code}
 	\>[0]\AgdaKeyword{data}\AgdaSpace{}%
 	\AgdaDatatype{SN}\AgdaSpace{}%
 	\AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
@@ -104,7 +108,10 @@
 	\AgdaSymbol{→}\AgdaSpace{}%
 	\AgdaDatatype{SN}\AgdaSpace{}%
 	\AgdaBound{t}\<%
-	\\
+\end{code}
+%</SN>
+
+\begin{code}
 	%
 	\\[\AgdaEmptyExtraSkip]%
 	\>[0]\AgdaComment{--\ Esta\ definicion\ es\ igual\ a\ SN\ pero\ se\ agrega\ una\ propiedad\ P\ que\ se\ debe\ cumplir\ para\ t.}\<%
