--- a/paper/references.bib
+++ b/paper/references.bib
@@ -148,3 +148,9 @@
 	author = {Girard, Jean-Yves and Lafont, Yves and Taylor, Paul},
 	year = {1989}
 }
+@misc{Kovacs,
+	url = {https://github.com/AndrasKovacs/misc-stuff/blob/master/agda/STLCStrongNorm/StrongNorm2.agda}
+}
+@misc{Barenbaum,
+	url = {https://github.com/foones/formal-proofs/blob/master/strong-normalization/reducibility-candidates.agda}
+}
